# ZephyrTest

./: .venv  CMakeLists.txt  README.rst  TEMP.json  env.sh  overlay.dts  prj.conf  project.code-workspace  sample.yaml
boards/: nucleo_f303re.overlay
inc/: frame_controller.h  led_control.h  threads_inc.h
src/: led_control.c  main.c  peripherals_init.c  peripherals_init.h  uart_controller.c
src/test_threads/: force_switch_thread.c  main_thread.c  queue_thread.c  semaphore_thread.c  switch_thread.c
